Update README with compilation and execution instructions
Added instructions for compiling and running the program.