@@ -1,2 +1,4 @@
 # Previs-o-do-tempo
-Uma aplicação Java onde trago a utilização da API da https://www.weatherapi.com/ e fazendo a previsão do tempo da cidade em que for pedida
+Uma aplicação Java onde trago a utilização da API da https://www.weatherapi.com/ e fazendo a previsão do tempo da cidade em que for pedida.
+
+para iniciar o progama, baixe, abra o CMD na pasta em que estiver feito o download do arquivo, compile com o comando "javac --module-path lib\javafx-sdk-22.0.1\lib --add-modules javafx.controls Main.java" e execute com o comando "java --module-path lib\javafx-sdk-22.0.1\lib --add-modules javafx.controls Main.java"
